<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ostermann.sapinoscope.Message_alerte_activity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="0dp"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="0dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="2dp" >

            <TextView
                android:id="@+id/txt_messageAlerte_parcelleName_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parcelle"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_messageAlerte_parcelleName_champ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" nom"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="2dp" >

            <TextView
                android:id="@+id/txt_messageAlerte_secteurName_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secteur"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_messageAlerte_secteurName_champ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" nom"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="15sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_messageAlerte_infoTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/message_alerte_info" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="232dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="274dp"
                android:src="@drawable/pic_alerte" />

        </FrameLayout>

        <Button
            android:id="@+id/bt_messageAlerte_ok"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingLeft="0dp"
            android:text="@string/ok" />

    </LinearLayout>

</RelativeLayout>